[gd_scene load_steps=26 format=3 uid="uid://vo56ijhbkl67"]

[ext_resource type="Texture2D" uid="uid://doxqo0gr517hi" path="res://assets/sprites/ui/BackButton.aseprite" id="1_heqkm"]
[ext_resource type="Script" path="res://scenes/ui/CSS/character_select_screen.gd" id="1_tkj6p"]
[ext_resource type="Texture2D" uid="uid://b7hsnxc8xjf2n" path="res://assets/sprites/ui/BackButton2.aseprite" id="2_18vth"]
[ext_resource type="Script" path="res://scenes/ui/Back_Button.gd" id="3_32cng"]
[ext_resource type="Texture2D" uid="uid://bm502qu0mq6x2" path="res://assets/sprites/ui/BackButton3.aseprite" id="4_xx3w4"]
[ext_resource type="Texture2D" uid="uid://cc5dq377oh24l" path="res://assets/sprites/ui/BackButton4.aseprite" id="5_di07j"]
[ext_resource type="Texture2D" uid="uid://d0e8qhbg32qlg" path="res://assets/sprites/ui/Stopwatch.aseprite" id="6_gxo4t"]
[ext_resource type="Script" path="res://scenes/ui/Time.gd" id="7_fld30"]
[ext_resource type="Texture2D" uid="uid://mcn37wud2rco" path="res://assets/sprites/ui/ForwardButton.aseprite" id="8_ixnd7"]
[ext_resource type="Texture2D" uid="uid://bf43bmbjqjeba" path="res://assets/sprites/ui/ForwardButton2.aseprite" id="9_w7yn3"]
[ext_resource type="PackedScene" uid="uid://drrrm4k7b2br7" path="res://scenes/ui/CSS/char_buttons/CSS_Button_Sword.tscn" id="10_a8e3n"]
[ext_resource type="PackedScene" uid="uid://dmpsohckv2paj" path="res://scenes/ui/char_previews/CSS_Character_Previews.tscn" id="11_saj7c"]
[ext_resource type="PackedScene" uid="uid://cr81xncqleyka" path="res://scenes/ui/CSS/Token/token.tscn" id="12_hdbvq"]
[ext_resource type="PackedScene" uid="uid://ba8xamdvp2h2t" path="res://scenes/ui/CSS/Hands/Hands.tscn" id="13_8bmog"]
[ext_resource type="Script" path="res://scenes/ui/CSS/Boundaries.gd" id="14_eq3mo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4qv0"]
size = Vector2(234, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_suh54"]
size = Vector2(124, 144)

[sub_resource type="SystemFont" id="SystemFont_xotov"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2jpg"]
size = Vector2(1280, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2ubo"]
size = Vector2(60, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hejh1"]
size = Vector2(1280, 80)

[sub_resource type="Animation" id="Animation_7dvb0"]
resource_name = "Not Ready"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 800)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/Label/ReadyToFight/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wjrpk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/Label/ReadyToFight/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8fycr"]
resource_name = "Ready"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(640, 900), Vector2(640, 360), Vector2(640, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/Label/ReadyToFight/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfimg"]
_data = {
"Not Ready": SubResource("Animation_7dvb0"),
"RESET": SubResource("Animation_wjrpk"),
"Ready": SubResource("Animation_8fycr")
}

[node name="Character Select Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tkj6p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.627451, 0.772549, 0.862745, 1)

[node name="CSS Sections" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="MarginContainer" parent="CSS Sections"]
custom_minimum_size = Vector2(0, 145)
layout_mode = 2

[node name="HBox Settings" type="HBoxContainer" parent="CSS Sections/Settings"]
custom_minimum_size = Vector2(0, 145)
layout_mode = 2
alignment = 1

[node name="Back Button" type="TextureButton" parent="CSS Sections/Settings/HBox Settings"]
custom_minimum_size = Vector2(251, 145)
layout_mode = 2
texture_normal = ExtResource("1_heqkm")
texture_pressed = ExtResource("2_18vth")
ignore_texture_size = true
stretch_mode = 3
script = ExtResource("3_32cng")

[node name="ButtonArea2D" type="Area2D" parent="CSS Sections/Settings/HBox Settings/Back Button"]
collision_layer = 65536
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="CSS Sections/Settings/HBox Settings/Back Button/ButtonArea2D"]
position = Vector2(133, 81)
shape = SubResource("RectangleShape2D_e4qv0")

[node name="Time" type="HBoxContainer" parent="CSS Sections/Settings/HBox Settings"]
custom_minimum_size = Vector2(506, 0)
layout_mode = 2
alignment = 1

[node name="Button_Left" type="TextureButton" parent="CSS Sections/Settings/HBox Settings/Time"]
custom_minimum_size = Vector2(122, 0)
layout_mode = 2
texture_normal = ExtResource("4_xx3w4")
texture_pressed = ExtResource("5_di07j")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonArea2D" type="Area2D" parent="CSS Sections/Settings/HBox Settings/Time/Button_Left"]
position = Vector2(60, 72)
collision_layer = 65536
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="CSS Sections/Settings/HBox Settings/Time/Button_Left/ButtonArea2D"]
shape = SubResource("RectangleShape2D_suh54")

[node name="TextureRect" type="TextureRect" parent="CSS Sections/Settings/HBox Settings/Time"]
texture_filter = 2
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("6_gxo4t")
expand_mode = 2
stretch_mode = 5

[node name="Time" type="Label" parent="CSS Sections/Settings/HBox Settings/Time"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_xotov")
theme_override_font_sizes/font_size = 60
text = "1:00
"
script = ExtResource("7_fld30")

[node name="Button_Right" type="TextureButton" parent="CSS Sections/Settings/HBox Settings/Time"]
custom_minimum_size = Vector2(122, 0)
layout_mode = 2
texture_normal = ExtResource("8_ixnd7")
texture_pressed = ExtResource("9_w7yn3")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonArea2D" type="Area2D" parent="CSS Sections/Settings/HBox Settings/Time/Button_Right"]
position = Vector2(60, 72)
collision_layer = 65536
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="CSS Sections/Settings/HBox Settings/Time/Button_Right/ButtonArea2D"]
shape = SubResource("RectangleShape2D_suh54")

[node name="Character Select" type="MarginContainer" parent="CSS Sections"]
custom_minimum_size = Vector2(0, 275)
layout_mode = 2

[node name="Background" type="ColorRect" parent="CSS Sections/Character Select"]
layout_mode = 2
color = Color(0.333333, 0.501961, 0.74902, 0.466667)

[node name="GridContainer" type="GridContainer" parent="CSS Sections/Character Select"]
custom_minimum_size = Vector2(524, 206)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 6

[node name="Character" parent="CSS Sections/Character Select/GridContainer" instance=ExtResource("10_a8e3n")]
layout_mode = 2

[node name="Character Preview" type="MarginContainer" parent="CSS Sections"]
custom_minimum_size = Vector2(0, 290)
layout_mode = 2

[node name="Char Previews" type="HBoxContainer" parent="CSS Sections/Character Preview"]
layout_mode = 2
alignment = 1

[node name="Character Preview" parent="CSS Sections/Character Preview/Char Previews" instance=ExtResource("11_saj7c")]
layout_mode = 2
id = 1
banner_color = Color(0.99468, 0, 0.194232, 1)

[node name="Character Preview2" parent="CSS Sections/Character Preview/Char Previews" instance=ExtResource("11_saj7c")]
layout_mode = 2
id = 2
banner_color = Color(0.243219, 0.505333, 1, 1)

[node name="token" parent="." instance=ExtResource("12_hdbvq")]
position = Vector2(496, 478)
id = 1

[node name="token2" parent="." instance=ExtResource("12_hdbvq")]
position = Vector2(733, 478)
id = 2

[node name="Hand_1" parent="." instance=ExtResource("13_8bmog")]
position = Vector2(443, 581)
id = 1

[node name="Hand_2" parent="." instance=ExtResource("13_8bmog")]
position = Vector2(729, 594)
id = 2

[node name="Boundaries" type="Node2D" parent="."]
script = ExtResource("14_eq3mo")

[node name="Top" type="Area2D" parent="Boundaries"]
position = Vector2(640, -30)
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Top"]
shape = SubResource("RectangleShape2D_u2jpg")

[node name="bottom" type="Area2D" parent="Boundaries"]
position = Vector2(640, 750)
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/bottom"]
shape = SubResource("RectangleShape2D_u2jpg")

[node name="right" type="Area2D" parent="Boundaries"]
position = Vector2(1310, 360)
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/right"]
shape = SubResource("RectangleShape2D_n2ubo")

[node name="left" type="Area2D" parent="Boundaries"]
position = Vector2(-30, 360)
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/left"]
shape = SubResource("RectangleShape2D_n2ubo")

[node name="ReadyToFightBanner" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="ReadyToFightBanner"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -30.0
offset_right = 640.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.176471, 0.215686, 0.54902)

[node name="Label" type="Label" parent="ReadyToFightBanner/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Ready To Fight!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyToFight" type="Area2D" parent="ReadyToFightBanner/ColorRect/Label"]
collision_layer = 65536
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReadyToFightBanner/ColorRect/Label/ReadyToFight"]
position = Vector2(640, 40)
shape = SubResource("RectangleShape2D_hejh1")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReadyToFightBanner"]
libraries = {
"": SubResource("AnimationLibrary_gfimg")
}

[connection signal="pressed" from="CSS Sections/Settings/HBox Settings/Back Button" to="CSS Sections/Settings/HBox Settings/Back Button" method="_on_pressed"]
[connection signal="pressed" from="CSS Sections/Settings/HBox Settings/Time/Button_Left" to="CSS Sections/Settings/HBox Settings/Time/Time" method="Decrease"]
[connection signal="pressed" from="CSS Sections/Settings/HBox Settings/Time/Button_Right" to="CSS Sections/Settings/HBox Settings/Time/Time" method="Increase"]
[connection signal="character_deselected" from="CSS Sections/Character Select/GridContainer/Character" to="CSS Sections/Character Preview/Char Previews/Character Preview" method="_on_Character_deselected"]
[connection signal="character_deselected" from="CSS Sections/Character Select/GridContainer/Character" to="CSS Sections/Character Preview/Char Previews/Character Preview2" method="_on_Character_deselected"]
[connection signal="character_hovered" from="CSS Sections/Character Select/GridContainer/Character" to="CSS Sections/Character Preview/Char Previews/Character Preview" method="_on_Character_hovered"]
[connection signal="character_hovered" from="CSS Sections/Character Select/GridContainer/Character" to="CSS Sections/Character Preview/Char Previews/Character Preview2" method="_on_Character_hovered"]
[connection signal="character_selected" from="CSS Sections/Character Select/GridContainer/Character" to="CSS Sections/Character Preview/Char Previews/Character Preview" method="_on_Character_selected"]
[connection signal="character_selected" from="CSS Sections/Character Select/GridContainer/Character" to="CSS Sections/Character Preview/Char Previews/Character Preview2" method="_on_Character_selected"]
[connection signal="area_entered" from="Boundaries/Top" to="CSS Sections/Settings/HBox Settings/Back Button" method="_on_top_area_entered"]
[connection signal="area_entered" from="Boundaries/bottom" to="CSS Sections/Settings/HBox Settings/Back Button" method="_on_bottom_area_entered"]
[connection signal="area_entered" from="Boundaries/right" to="CSS Sections/Settings/HBox Settings/Back Button" method="_on_right_area_entered"]
[connection signal="area_entered" from="Boundaries/left" to="CSS Sections/Settings/HBox Settings/Back Button" method="_on_left_area_entered"]
